--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    flex: 3;
+    flex: 3px;
     /*height: fit-content;*/
     margin: 20px;
     padding-bottom: 30px;
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
   }
   
   .sidebarItem {
