--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,14 +1,14 @@
 .sidebar {
     flex: 3px;
     /*height: fit-content;*/
-    margin: 20px;
+    margin: 50px;
     padding-bottom: 30px;
     background-color: #fdfbfb;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    padding-right: 20px;
   }
   
   .sidebarItem {
