--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -15,7 +15,7 @@
   }
   
   .singlePostTitle {
-    text-align: center;
+    text-align: left;
     margin: 10px;
     font-size: 28px;
     font-family: "Lora", sans-serif;
@@ -40,6 +40,7 @@
   
   .singlePostInfo {
     margin-bottom: 20px;
+    margin-left: 10px;
     display: flex;
     justify-content: space-between;
     font-size: 16px;
@@ -55,10 +56,15 @@
     color: #666;
     font-size: 18px;
     line-height: 25px;
+    text-align: justify;
+  
+    
   }
   
   .singlePostDesc::first-letter {
     margin-left: 20px;
     font-size: 30px;
     font-weight: 600;
-  }
+    
+    }
+  
